--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#2B3661"
     tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/settings"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintStart_toStartOf="@+id/grid"
+        app:layout_constraintTop_toBottomOf="@+id/grid"
+        app:srcCompat="@drawable/outline_settings_applications_white_48" />
+
+    <ImageView
+        android:id="@+id/restart"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintStart_toStartOf="@+id/grid"
+        app:layout_constraintTop_toBottomOf="@+id/grid"
+        app:srcCompat="@drawable/outline_replay_white_48" />
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/grid"
@@ -24,12 +47,16 @@
 
     <Button
         android:id="@+id/change"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="80dp"
+        android:layout_height="70dp"
         android:layout_marginTop="77dp"
         android:layout_marginEnd="146dp"
         android:layout_marginRight="146dp"
-        android:text="Button"
+        android:background="@color/colorAccent"
+        android:text="1"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
